--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,46 @@
 </head>
 
 <body>
-    <p>Hello My New Project!</p>
+    <section class="section fresh-life">
+        <div class="container">
+            <header class="header">
+                <img class="header__logo" src="./assets/top/logo.png" alt="">
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">Home</li>
+                        <li class="nav__item">About</li>
+                        <li class="nav__item">Services</li>
+                        <li class="nav__item">Gallery</li>
+                        <li class="nav__item">Blog</li>
+                        <li class="nav__item">Contact</li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="content">
+            </div>
+        </div>
+    </section>
+    <section class="section about-us">
+        <div class="container"></div>
+    </section>
+    <section class="section our-services">
+        <div class="container"></div>
+    </section>
+    <section class="section gallery">
+        <div class="container"></div>
+    </section>
+    <section class="section subscribe-to-us">
+        <div class="container"></div>
+    </section>
+    <section class="section blog">
+        <div class="container"></div>
+    </section>
+    <section class="section contact">
+        <div class="container"></div>
+    </section>
+    <footer class="footer">
+        <div class="container"></div>
+    </footer>
     <script src="./js/app.js"></script>
 </body>
 
